fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ h1 {
   font-size: 14px;
   color: #272142;
 }
-@media (max-width: 1024px) {
+@media (max-width: 900px) {
   h1 {
     font-size: 42px;
   }
